compiler/lume_hir/src/lower/snapshots/lume_hir__lower__tests__using_self_in_function@valid.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: "fn foo() -> void { }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        8195533856448846917: Function(
            FunctionDefinition {
                id: 8195533856448846917,
                func_id: None,
                visibility: Private,
                name: foo,
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: void,
                        type_params: [],
                        location: <internal>:12:16,
                    },
                ),
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:17:20,
                    },
                ),
                location: <internal>:0:20,
            },
        ),
    },
    statements: {},
    expressions: {},
}
